# HRM-c--vulkan

./: .clang-format  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  HRM_ENHANCEMENT_ROADMAP.md  LANGUAGE_TRAINING_PREP.md  QUANTIZATION_IMPLEMENTATION_REPORT.md  QUANTIZATION_README.md  README.md  TODO.md  TODO_QUANTIZATION.md  TRAINING_SUMMARY.md  cpp_requirements.md  data_expansion_plan.md  generate_attention_test_data.py  grok_direct.py  hrm.service  idle_learning_state.json  install_systemd.sh  install_windows_service.bat  install_windows_service.ps1  prepare_language_dataset.sh  pretrain.py  session-ses_5126.md  setup_character_training.sh  test_cad.cpp  test_data_key.txt  test_data_output.txt  test_data_value.txt  test_gradients.cpp  test_hrm.py  test_hrm_system.bat  test_hrm_system.ps1  test_hrm_system.sh  test_idle  test_idle_integration  test_mcmc.cpp  (+4 more)
config/: character_training_config.json  hrm_config.txt  stage_foundation_config.json
data/: README.md
dataset/: CMakeLists.txt
docker/: Dockerfile
docs/: install.md  puzzle_visualizer.html
hrm_cloud_storage/: compaction_compact_1764909312533978300_0.mem  compaction_compact_1766217068406553266_0.mem  compaction_compact_1766342657107515762_0.mem  compaction_compact_1766342657373087614_0.mem  compaction_compact_1766342657680108012_0.mem  compaction_compact_1766342657966819053_0.mem  compaction_compact_1766342658258222922_0.mem  compaction_compact_1766342658518466999_0.mem  compaction_compact_1766342658813175830_0.mem  compaction_compact_1766342659110304372_0.mem  compaction_compact_1766342659414588958_0.mem  compaction_compact_1766342659723313466_0.mem  compaction_compact_1766342685374946434_0.mem  compaction_compact_1766342685682569122_0.mem  compaction_compact_1766373707705238702_0.mem
hrm_compactions/: compact_1764909312533978300_0.compact
logs/: character_training_demo_stats.json  character_training_stats.json  epoch_1_results.txt  epoch_2_results.txt  epoch_3_results.txt  flash_attention_demo.json  githubci.txt  hrm_arxiv_training_results.json  hrm_training_results.json  (+4 more)
src/: CMakeLists.txt  advanced_training_optimizations.hpp  arc_eval.cpp  attention.cpp  attention.hpp  block.cpp  block.hpp  character_language_config.hpp  character_language_evaluator.cpp  character_language_evaluator.hpp  character_language_loss.cpp  character_language_loss.hpp  character_language_trainer.cpp  character_language_trainer.hpp  character_text_dataset.cpp  character_text_dataset.hpp  cloud_storage_manager.cpp  cloud_storage_manager.hpp  code_analysis_system.cpp  config_manager.hpp  embedding.cpp  embedding.hpp  evaluate.cpp  flash_attention.cpp  generate_test_data.cpp  hardware_abstraction_layer.cpp  hardware_profiler.hpp  hierarchical_reasoning_module.cpp  hierarchical_reasoning_module.hpp  hrm.cpp  hrm.hpp  hrm_cli.cpp  hrm_cli.hpp  hrm_gui.cpp  hrm_gui.hpp  hrm_inner.cpp  hrm_inner.hpp  hrm_main.cpp  http_client.hpp  idle_time_repair_scheduler.cpp  (+32 more)
src/cad/: CMakeLists.txt  freecad_interface.cpp  freecad_interface.hpp
src/core/: CMakeLists.txt  attention.cpp  attention.hpp  block.cpp  block.hpp  embedding.cpp  embedding.hpp  linear.cpp  linear.hpp  losses.cpp  losses.hpp  mlp.cpp  mlp.hpp  rms_norm.cpp  rms_norm.hpp
src/hrm/: CMakeLists.txt  hierarchical_reasoning_module.cpp  hierarchical_reasoning_module.hpp  hrm.cpp  hrm.hpp  hrm_inner.cpp  hrm_inner.hpp  idle_learning_manager.cpp  idle_learning_manager.hpp  meta_reasoning_layer.cpp  meta_reasoning_layer.hpp  resource_aware_hrm.cpp  resource_aware_hrm.hpp
src/main/: hrm_cli.cpp  hrm_cli.hpp  hrm_gui.cpp  hrm_gui.hpp  hrm_main.cpp  main.cpp  nyx_gui_main.cpp
src/physics/: CMakeLists.txt  mcmc_simulator.cpp  mcmc_simulator.hpp
src/self_mod/: CMakeLists.txt  code_analysis_system.cpp  code_analysis_system.hpp  meta_quantization_learning.cpp  meta_quantization_learning.hpp  quantization_smoke_test.cpp  runtime_compilation_system.cpp  self_evolving_hrm.cpp  self_evolving_hrm.hpp  self_modifying_hrm.cpp  self_modifying_hrm.hpp  self_repair_system.cpp  self_repair_system.hpp
src/system/: CMakeLists.txt  cloud_storage_manager.cpp  cloud_storage_manager.hpp  hardware_abstraction_layer.cpp  hardware_abstraction_layer.hpp  hardware_profiler.cpp  hardware_profiler.hpp  hybrid_execution_engine.cpp  hybrid_execution_engine.hpp  idle_time_repair_scheduler.cpp  idle_time_repair_scheduler.hpp  intelligent_cache_manager.hpp  memory_compaction_system.cpp  memory_compaction_system.hpp  performance_profiling_system.hpp  resource_monitor.cpp  sandbox_manager.cpp  sandbox_manager.hpp  system_integration_manager.cpp  task_manager.cpp  task_manager.hpp  windows_service_manager.cpp  windows_service_manager.hpp
src/training/: CMakeLists.txt  advanced_training_optimizations.cpp  advanced_training_optimizations.hpp  character_language_config.hpp  character_language_evaluator.cpp  character_language_evaluator.hpp  character_language_loss.cpp  character_language_loss.hpp  character_language_trainer.cpp  character_language_trainer.hpp  character_text_dataset.cpp  character_text_dataset.hpp  gradient_checkpointing_manager.hpp  int4_training_engine.cpp  int4_training_engine.hpp  training_batch.hpp
src/utils/: CMakeLists.txt  character_cache.cpp  character_cache.hpp  config_manager.cpp  config_manager.hpp  cpu_compatibility.cpp  cpu_compatibility.h  http_client.cpp  http_client.hpp  logger.hpp  utf8_processor.cpp  utf8_processor.hpp
src/vulkan/: CMakeLists.txt  adaptive_quantization.cpp  adaptive_quantization.hpp  flash_attention.hpp  mixed_precision.hpp  optional_quantization_manager.cpp  optional_quantization_manager.hpp  quantization_c.c  quantization_cpu_test.cpp  quantization_types.hpp  vulkan_compatibility.cpp  vulkan_compatibility.h  vulkan_instance_manager.hpp  vulkan_resource_manager.cpp  vulkan_resource_manager.hpp  vulkan_trainer.cpp  vulkan_trainer.hpp
tests/: CMakeLists.txt  attention_cpu_grad_smoke.cpp  attention_cpu_grad_test.cpp  hrm_system_test.cpp
tests/integration/: quantization_integration_test.cpp  self_mod_test.cpp
(+239 files in other folders)
